tests/diagnostics/cases/types/04_let_type_mismatch_float_to_int.home
// Type mismatch: f64 inferred from literal, target is i32.
fn main() {
    let p = 1.5
    let q: i32 = p
}
